--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^2.1.3",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
@@ -43,6 +43,6 @@
   },
   "devDependencies": {
     "sass": "^1.49.0",
-    "typescript-plugin-css-modules": "^3.4.0"
+    "typescript-plugin-css-modules": "^5.0.1"
   }
 }
